(r4831) Fix a vanilla bug in the editor: The Z coordinate of the map was not set for surface maps.
(r4830) Fix a vanilla glitch: Some text in the editor taskbar sometimes got a shadow.
(r4829) Fix a vanilla bug, which made it possible to hire a merc, if there is a hated merc on the team, though he should refuse for other reasons.
(r4768) Enable scrolling the item pickup list with the mouse wheel.
(r4765) Fix a vanilla bug, when trying to remove more than $20.000 from the player's account by clicking on $100 or $10 while trading with a shopkeeper (broken display).
(r4722) Restore path cancellation when right clicking on the destination column in the map screen, which was broken in r3592.
(r4671) Fix a vanilla glitch: Some dying sounds were not played because of inconsistent file names.
(r4663) Fix a vanilla glitch: Do not add two corpses for mercs died in auto resolve.
(r4600, r4817) Plug vanilla memory leak when loading savegames.
(r4597) Plug vanilla memory leak in the laptop file viewer.
(r4487) Fix a vanilla endless loop when an enemy tries to throw a grenade straight up.
(r4426) Fix a vanilla user after free when leaving a message on a merc's answering machine and the greeting message has ended.
(r4366) Fix a vanilla crash in the editor when looking at the items summary and there are no items in the current sector.
(r4361) Enable scrolling the items lists in the editor with the mouse wheel.
(r4360) Enable scrolling the terrain and building graphics lists in the editor with the mouse wheel.
(r4359) Fix a vanilla buffer underrun, which occurs when displaying a multiline text containing a word longer than the maximum line width.  The most prominent example is the item view in the map editor with the German data files ("Leichte Panzerabwehrwaffe").
(r4357) Make the map editor available via the command line parameter -editor.
(r4303) Fix a vanilla bug, which restored a wrong amount of breath points at the start of the turn.

v0.10 - 2008-06-02 - Caramel